syntax = "proto3";

package saturn.type;

option go_package = "github.com/masterkeysrd/saturn/gen/proto/go/saturn/typepb;typepb";

// Represents an amount of money with its currency type.
message Money {
  // The currency code, as a three-letter ISO 4217 code.
  string currency_code = 1;

  // The cents amount of money.
  int64 cents = 2;
}
